# midifile

./: .gitignore  CMakeLists.txt
include/: Logger.h  MidiMessage.h
src/: Binasc.cpp  Logger.cpp  MidiFile.cpp  MidiMessage.cpp
tests/: CMakeLists.txt  save_out.py  test_outs.hpp  testlib.cpp
tests/files/: chor001.mid
tools/: CMakeLists.txt
